# rust-prime-sieve

./: .pre-commit-config.yaml  Cargo.toml  README.md  primes.txt
.github/workflows/: ci.yml  pull_request.yml
benches/: prime_sieve_benchmark.rs
src/: lib.rs  main.rs
src/multithreaded/: mod.rs  rayon.rs
src/singlethreaded/: atkin.rs  atkins.rs  basic.rs  mod.rs  optimized.rs
