[package]
name = "prime-sieve"
version = "0.1.0"
edition = "2021"
authors = ["Martin Jonsson <martinjonsson01@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "prime_sieve_benchmark"
harness = false
