[package]
name = "prime-sieve"
version = "0.1.0"
edition = "2021"
authors = ["Martin Jonsson <martinjonsson01@gmail.com>"]

[lib]
bench = false # Using Criterion means we don't need ordinary cargo bench

[profile.release]
debug = true

[dependencies]
rayon = "1.6.1"
num_cpus = "1.14.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "prime_sieve_benchmark"
harness = false
